# simple-gpt

./: .gitignore  README.md  app.py  create_tokenizer.py  dataloader.py  pyproject.toml  simple_gpt.py  tokenizer_500.json  trainer.py
